too many changes to keep track of, got initial js to work, buttons not changing, css tweaks, cursor blink no longer visible

--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@ p {
   padding: 1px 0 1px 15px;
   display: inline-block;
   margin-right: 0;
+  line-height: 1.6;
 }
 
 main {
@@ -58,25 +59,27 @@ main {
 }
 
 button {
+  font-family: 'Press Start 2P', cursive;
   background-color: black; 
   color: white;
   border: 0;
+  padding: 0;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: rgb(60,	64,	67);	
+  background-color: rgb(60,	64,	67);	 
 }
 
 button:focus {
   outline: none;
 }
 
-.btn1 {
+#btn1 {
   grid-row: 5 / 6;
 }
 
-.btn2 {
+#btn2 {
   grid-row: 6 / 7;
 }
 
